--- a/homePage.html
+++ b/homePage.html
@@ -20,8 +20,8 @@
       <div class="logo">
         <a href="homePage.html"><img src="/Images/CarRentalLogo.png" alt="logo" id="logoCar"> </a>
           <div class="navButtons">
-            <a href="about.html">About</a>    
-            <a href="skills.html">Skills</a>
+            <a href="homePage.html">Home</a>    
+            <a href="Cars.html">Cars</a>
             <a href="contact.html">Contact</a>
           </div>
       </div>
